# sales-agent

./: .env.example  .gitignore  CHANGELOG.txt  CONTRIBUTING.md  Makefile  README.md  README_ORI.md  debug_api.py  pyproject.toml  requirements.txt  run.py  run_api.py  sentiment_api.py  sentiment_model.pkl  start_sentiment_service.py  test_mail.py  vectorizer.pkl
.github/workflows/: poetry_unit_tests.yml
SallySalesBuddy/: SallySalesBuddyapi.py  chains.py  models.py  tools.py
Sentiment Analysis/: sentiment_analyzer.py  sentiment_api.py
api-website/: conf.py  index.rst
api-website/_build/html/: genindex.html  index.html  layout.html  modules.html  py-modindex.html  run.html  run_api.html  salesgpt.html  search.html  searchindex.js
api-website/_templates/: layout.html
api-website/salesgpt/: salesgpt.agents.rst  salesgpt.logger.rst  salesgpt.parsers.rst  salesgpt.prompts.rst  salesgpt.prompts_cn.rst  salesgpt.rst  salesgpt.tools.rst  salesgpt.version.rst
examples/: example_agent_setup.json  example_cn_agent_setup.json  example_es_agent_setup.json  sales_agent_with_context.ipynb  sample_product_catalog.txt  sample_product_catalog_2.txt  streaming_generator_example.py
frontend/: README.md
frontend/src/components/: chat-interface.tsx  chat-interface_1.tsx  git-hub-footer.tsx
salesgpt/: agents.py
tests/: test_api.py  test_salesgpt.py  test_tools.py
tests/test_data/: sample_product_catalog.txt
website/: docusaurus.config.js
website/docs/Basics/: Installation.md  Introduction.mdx  Quickstart.md
website/docs/Contribute/: About-the-team.md  Roadmap.md
(+28 files in other folders)
